--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
       <p>Hello world! This is HTML5 Boilerplate.</p>
 
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-      <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-
+      <script src="js/vendor/jquery-1.11.0.js"></script>
+      <script src="js/vendor/d3.v3.js"></script>
       <script src="js/plugins.js"></script>
       <script src="js/main.js"></script>
     </body>
