[api] Display COC.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
           <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
 
-      <p>Hello world! This is HTML5 Boilerplate.</p>
+      <h1 id="coc" style="display:none">Hello EmpireJS! Please remember our <a href="http://2014.empirejs.org/#/love">Code of Conduct</a> when writing visualizations.</h1>
+
+      <section id="put-stuff-here">
+
+      </section>
 
       <script src="js/vendor/jquery-1.11.0.js"></script>
       <script src="js/vendor/d3.v3.js"></script>
