--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
       <link rel="stylesheet" href="css/normalize.min.css">
       <link rel="stylesheet" href="css/main.css">
+      <link type="text/css" href="etsy-game-of-life/life.css" rel="stylesheet" media="screen">
 
       <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -23,12 +24,12 @@
       <h1 id="coc" style="display:none">Hello EmpireJS! Please remember our <a href="http://2014.empirejs.org/#/love">Code of Conduct</a> when writing visualizations.</h1>
 
       <section id="put-stuff-here">
-
       </section>
 
       <script src="js/vendor/jquery-1.11.0.js"></script>
       <script src="js/vendor/d3.v3.js"></script>
       <script src="js/plugins.js"></script>
       <script src="js/main.js"></script>
+      <script src="etsy-game-of-life/lib/three.min.js"></script>
     </body>
 </html>
